Update band to group in input/output JSON params to match documentation.
