# docs/swagger.json
@@ -150,7 +150,7 @@
         },
         "/song/{id}/lyrics": {
             "get": {
-                "description": "Получить текст песни по ID песни с возможностью пагинации",
+                "description": "Получить куплеты песни по ID песни с возможностью пагинации",
                 "consumes": [
                     "application/json"
                 ],
@@ -171,13 +171,13 @@
                     },
                     {
                         "type": "integer",
-                        "description": "Смещение для пагинации",
+                        "description": "С какого куплета начать",
                         "name": "offset",
                         "in": "query"
                     },
                     {
                         "type": "integer",
-                        "description": "Лимит записей для пагинации",
+                        "description": "Сколько куплетов вывести для пагинации",
                         "name": "limit",
                         "in": "query"
                     }
@@ -233,7 +233,7 @@
                     {
                         "type": "string",
                         "description": "Название группы",
-                        "name": "band",
+                        "name": "group",
                         "in": "query"
                     },
                     {
@@ -244,25 +244,25 @@
                     },
                     {
                         "type": "string",
-                        "description": "Дата выпуска от (формат: 2006-01-02)",
+                        "description": "Дата релиза от (формат: 2006-01-02)",
                         "name": "release_date_from",
                         "in": "query"
                     },
                     {
                         "type": "string",
-                        "description": "Дата выпуска до (формат: 2006-01-02)",
+                        "description": "Дата релиза до (формат: 2006-01-02)",
                         "name": "release_date_to",
                         "in": "query"
                     },
                     {
                         "type": "integer",
-                        "description": "Смещение в выборке",
+                        "description": "С какой песни выводить",
                         "name": "offset",
                         "in": "query"
                     },
                     {
                         "type": "integer",
-                        "description": "Ограничение количества результатов",
+                        "description": "Сколько песен выводить",
                         "name": "limit",
                         "in": "query"
                     }
@@ -301,7 +301,6 @@
     },
     "definitions": {
         "entities.LyricsVerseData": {
-            "description": "Куплет песни Index — номер куплета Content — текст куплета",
             "type": "object",
             "properties": {
                 "content": {
@@ -315,7 +314,7 @@
         "entities.SongData": {
             "type": "object",
             "properties": {
-                "band": {
+                "group": {
                     "type": "string"
                 },
                 "id": {
@@ -360,7 +359,7 @@
         "handlers.PatchSongParams": {
             "type": "object",
             "properties": {
-                "band": {
+                "group": {
                     "type": "string",
                     "minLength": 1
                 },
